--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 10.1.0.0/24
-        
+        - subnet: 10.2.0.0/24
+
 services:
   unbound:
     image: "mvance/unbound:latest"
@@ -18,7 +18,7 @@ services:
       - "./unbound:/opt/unbound/etc/unbound/"
     networks:
       private_network:
-        ipv4_address: 10.1.0.2
+        ipv4_address: 10.2.0.2
 
   wireguard:
     depends_on: [unbound, pihole]
@@ -33,23 +33,23 @@ services:
       - TZ=America/New_York
       - SERVERPORT=51820
       - PEERS=1
-      - PEERDNS=10.1.0.1
+      - PEERDNS=10.2.0.1
       - INTERNAL_SUBNET=10.6.0.0
-      - ALLOWEDIPS=10.1.0.0/24 # To hide client IP address on Internet 0.0.0.0/0
+      - ALLOWEDIPS=10.2.0.0/24 # To hide client IP address on Internet 0.0.0.0/0
     volumes:
       - ./wireguard:/config
       - /lib/modules:/lib/modules
     ports:
       - "51820:51820/udp"
     dns:
-      - 10.1.0.1
-      - 10.1.0.2
+      - 10.2.0.1
+      - 10.2.0.2
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     restart: unless-stopped
     networks:
       private_network:
-        ipv4_address: 10.1.0.3
+        ipv4_address: 10.2.0.3
 
   pihole:
     depends_on: [unbound]
@@ -59,13 +59,13 @@ services:
     hostname: pihole
     dns:
       - 127.0.0.1
-      - 10.1.0.2
+      - 10.2.0.2
     environment:
       TZ: "America/Los_Angeles"
       WEBPASSWORD: ""
-      ServerIP: 10.2.0.1
-      DNS1: 10.1.0.2
-      DNS2: 10.1.0.2
+      ServerIP: 10.1.0.1
+      DNS1: 10.2.0.2
+      DNS2: 10.2.0.2
     volumes:
       - "./etc-pihole/:/etc/pihole/"
       - "./etc-dnsmasq.d/:/etc/dnsmasq.d/"
@@ -73,7 +73,7 @@ services:
       - NET_ADMIN
     networks:
       private_network:
-        ipv4_address: 10.1.0.1
+        ipv4_address: 10.2.0.1
 
   yacht:
     container_name: yacht
@@ -87,3 +87,5 @@ services:
 
 volumes:
   yacht:
+
+    6XFGq4sqoo9EYm3r
