--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
 
 version: "3"
 
+volumes:
+    pihole:
+    wireguard:
+    portainer:
+
 networks:
+  agent_network:
+    driver: overlay
+    attachable: true
   private_network:
     ipam:
       driver: default
@@ -37,7 +45,7 @@ services:
       - INTERNAL_SUBNET=10.6.0.0
       - ALLOWEDIPS=10.2.0.0/24 # To hide client IP address on Internet 0.0.0.0/0
     volumes:
-      - ./wireguard:/config
+      - wireguard:/config
       - /lib/modules:/lib/modules
     ports:
       - "51820:51820/udp"
@@ -53,37 +61,55 @@ services:
 
   pihole:
     depends_on: [unbound]
-    container_name: pihole
     image: pihole/pihole:latest
+    container_name: pihole
     restart: unless-stopped
     hostname: pihole
     dns:
       - 127.0.0.1
       - 10.2.0.200
     environment:
-      TZ: "America/Los_Angeles"
+      TZ: "America/New_York"
       WEBPASSWORD: ""
       ServerIP: 10.1.0.100
       DNS1: 10.2.0.200
       DNS2: 10.2.0.200
     volumes:
-      - "./etc-pihole/:/etc/pihole/"
-      - "./etc-dnsmasq.d/:/etc/dnsmasq.d/"
+      - "pihole/etc-pihole/:/etc/pihole/"
+      - "pihole/etc-dnsmasq.d/:/etc/dnsmasq.d/"
     cap_add:
       - NET_ADMIN
     networks:
       private_network:
         ipv4_address: 10.2.0.100
 
-  yacht:
-    container_name: yacht
-    restart: unless-stopped
-    ports:
-      - 8000:8000
+  agent:
+    image: portainer/agent
     volumes:
-      - yacht:/config
       - /var/run/docker.sock:/var/run/docker.sock
-    image: selfhostedpro/yacht
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+    networks:
+      - agent_network
+    deploy:
+      mode: global
+      placement:
+        constraints: [node.platform.os == linux]
 
-volumes:
-  yacht:
+  portainer:
+    image: portainer/portainer-ce
+    command: -H tcp://tasks.agent:9001 --tlsskipverify
+    # ports:
+    #   - "9000:9000"
+    #   - "8000:8000"
+    volumes:
+      - portainer:/data
+    networks:
+      - agent_network
+      private_network:
+        ipv4_address: 10.2.0.101
+
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.role == manager]    
