--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,9 @@ volumes:
     pihole-etc-pihole:
     pihole-etc-dnsmasq.d:
     wireguard:
-    wireguard_admin:
     portainer_data:
 
 networks:
-  admin_network:
-    ipam:
-      driver: default
-      config:
-        - subnet: 12.2.0.0/24
   private_network:
     ipam:
       driver: default
@@ -20,33 +14,6 @@ networks:
         - subnet: 10.2.0.0/24
 
 services:
-  wireguardAdmin:
-    image: linuxserver/wireguard
-    container_name: wireguard-admin
-    cap_add:
-      - NET_ADMIN
-      - SYS_MODULE
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/New_York
-      - SERVERPORT=51821
-      - PEERS=5
-      - PEERDNS=auto
-      - INTERNAL_SUBNET=12.6.0.0
-      - ALLOWEDIPS=12.2.0.0/24
-    volumes:
-      - wireguard_admin:/config
-      - /lib/modules:/lib/modules
-    ports:
-      - "51821:51821/udp"
-    sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
-    restart: unless-stopped
-    networks:
-      admin_network:
-        ipv4_address: 12.2.0.3
-
   portainer:
     image: portainer/portainer-ce
     container_name: protainer-ui
@@ -56,8 +23,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
     networks:
-      admin_network:
-        ipv4_address: 12.2.0.100
+      private_network:
+        ipv4_address: 10.2.0.101
 
   unbound:
     image: "mvance/unbound:latest"
