--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,15 @@ volumes:
     pihole-etc-pihole:
     pihole-etc-dnsmasq.d:
     wireguard:
+    wireguard_admin:
     portainer_data:
 
 networks:
+  admin_network:
+    ipam:
+      driver: default
+      config:
+        - subnet: 12.2.0.0/24
   private_network:
     ipam:
       driver: default
@@ -14,6 +20,34 @@ networks:
         - subnet: 10.2.0.0/24
 
 services:
+
+  wireguardAdmin:
+    image: linuxserver/wireguard
+    container_name: wireguard-admin
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
+      - SERVERPORT=7000
+      - PEERS=1
+      - PEERDNS=auto
+      - INTERNAL_SUBNET=12.6.0.0
+      - ALLOWEDIPS=12.2.0.0/24
+    volumes:
+      - wireguard_admin:/config
+      - /lib/modules:/lib/modules
+    ports:
+      - "7000:51820/udp"
+    sysctls:
+      - net.ipv4.conf.all.src_valid_mark=1
+    restart: unless-stopped
+    networks:
+      admin_network:
+        ipv4_address: 12.2.0.3
+
   portainer:
     image: portainer/portainer-ce
     container_name: protainer-ui
@@ -23,8 +57,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
     networks:
-      private_network:
-        ipv4_address: 10.2.0.101
+      admin_network:
+        ipv4_address: 12.2.0.100
 
   unbound:
     image: "mvance/unbound:latest"
@@ -52,12 +86,12 @@ services:
       - PEERS=1
       - PEERDNS=10.2.0.100
       - INTERNAL_SUBNET=10.6.0.0
-      - ALLOWEDIPS=10.2.0.0/24
+      - ALLOWEDIPS=10.2.0.0/24 # To hide client IP address on Internet 0.0.0.0/0
     volumes:
       - wireguard:/config
       - /lib/modules:/lib/modules
     ports:
-      - "51820:51820/udp"
+      - "51821:51820/udp"
     dns:
       - 10.2.0.100
       - 10.2.0.200
@@ -78,7 +112,7 @@ services:
       - 127.0.0.1
       - 10.2.0.200
     environment:
-      TZ: "America/New_York"
+      TZ: "America/Los_Angeles"
       WEBPASSWORD: ""
       ServerIP: 10.1.0.100
       DNS1: 10.2.0.200
