Added DNS 1.1.1.1 to admin network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - TZ=America/New_York
       - SERVERPORT=7000
       - PEERS=1
+      - PEERDNS=1.1.1.1
       - INTERNAL_SUBNET=12.6.0.0
       - ALLOWEDIPS=12.2.0.0/24
     volumes:
