--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,41 @@ volumes:
 
 networks:
   admin-network:
-    name: wireguard-admin
+    name: pwn-admin
     ipam:
       driver: default
       config:
         - subnet: 12.2.0.0/24
   private-network:
-    name: wireguard-private
+    name: pwn-private
     ipam:
       driver: default
       config:
         - subnet: 10.2.0.0/24
 
 services:
+######################
+# PWN Admin Services #
+######################
+  agent:
+    image: portainer/agent
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+    networks:
+      admin-network:
+        ipv4_address: 12.2.0.101
+
+  portainer:
+    image: portainer/portainer-ce
+    restart: unless-stopped
+    volumes:
+      - portainer-data-volume:/data
+    networks:
+      admin-network:
+        ipv4_address: 12.2.0.100
+
   wireguard-admin:
     image: linuxserver/wireguard
     container_name: wireguard-admin
@@ -36,11 +58,11 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=America/New_York
-      - SERVERPORT=7000
-      - PEERS=1
-      - PEERDNS=1.1.1.1
-      - INTERNAL_SUBNET=12.6.0.0
+      - TZ=America/New_York # Change to your timezone.
+      - SERVERPORT=7000 # 
+      - PEERS=1 # Number of client profiles.
+      - PEERDNS=1.1.1.1 # DNS when client is connected.
+      - INTERNAL_SUBNET=12.6.0.0 # Subnet for all wireguard connections.
     volumes:
       - wireguard-admin-volume:/config
       - /lib/modules:/lib/modules
@@ -52,18 +74,10 @@ services:
     networks:
       admin-network:
         ipv4_address: 12.2.0.3
-        
-  portainer:
-    image: portainer/portainer-ce
-    container_name: protainer-ui
-    restart: unless-stopped
-    command: -H unix:///var/run/docker.sock
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - portainer-data-volume:/data
-    networks:
-      admin-network:
-        ipv4_address: 12.2.0.100
+
+########################
+# PWN Private Services #
+########################
 
   unbound:
     image: "mvance/unbound:latest"
@@ -86,19 +100,19 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=America/New_York
+      - TZ=America/New_York # Change to your timezone.
       - SERVERPORT=50000
-      - PEERS=1
-      - PEERDNS=10.2.0.100
-      - INTERNAL_SUBNET=10.6.0.0
+      - PEERS=1 # Number of Client profiles (Change change this in portainer)
+      - PEERDNS=10.2.0.100 # points to Pihole
+      - INTERNAL_SUBNET=10.6.0.0 # Subnet for all wireguard connections.
     volumes:
       - wireguard-private-volume:/config
       - /lib/modules:/lib/modules
     ports:
       - "50000:51820/udp"
     dns:
-      - 10.2.0.100
-      - 10.2.0.200
+      - 10.2.0.100 # points to Pihole
+      - 10.2.0.200 # points to Unbound
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
     restart: unless-stopped
@@ -114,16 +128,16 @@ services:
     hostname: pihole
     dns:
       - 127.0.0.1
-      - 10.2.0.200
+      - 10.2.0.200 # points to Unbound
     environment:
       TZ: "America/New_York"
       WEBPASSWORD: ""
       ServerIP: 10.1.0.100
-      DNS1: 10.2.0.200
-      DNS2: 10.2.0.200
+      DNS1: 10.2.0.200 # points to Unbound
+      DNS2: 10.2.0.200 # points to Unbound
     volumes:
       - pihole-volume/:/etc/pihole/
-      - pihole-dnsmasq.d-volume/:/etc/dnsmasq.d/
+      - dnsmasq.d-volume/:/etc/dnsmasq.d/
     cap_add:
       - NET_ADMIN
     networks:
